--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
   "homepage": "https://github.com/danfinlay/captp-stream#readme",
   "dependencies": {
     "@agoric/captp": "^1.2.3"
+  },
+  "devDependencies": {
+    "@agoric/eventual-send": "^0.8.0",
+    "@agoric/harden": "^0.0.7",
+    "minipass": "^3.1.1",
+    "obj-multiplex": "^1.0.0",
+    "tape": "^4.13.2"
   }
 }
